InternexDev_Sandbox/src/objects/Custom_Notifications__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <defaultValue>&apos;Internex&apos;</defaultValue>
        <label>Body</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Portal_Id__c</fullName>
        <formula>Client_Account__r.Portal_External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Portal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Client_Account__c.Client__c</field>
                <operation>equals</operation>
                <valueField>$Source.Client_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Custom Notifications</relationshipLabel>
        <relationshipName>Custom_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>akritiv__Brand__c</referenceTo>
        <relationshipLabel>Custom Notifications</relationshipLabel>
        <relationshipName>Custom_Notifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Notification_Type__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Portal_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000000}</displayFormat>
        <label>Custom Notification No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>